--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <p>I am pursuing Electronics Engineering from Ramrao Adhik's Institute of Technology</p>
     <p>I am skilled in Robotics and VLSI and Embedded Systems are major subjects of my research</p>
 <h2>Credentials and Portfolio</h2>
-<p><a href="resume.html">My Resume</a> | <a href="https://github.com/krupa1809">My GitHub</a> | <a href="https://www.linkedin.com/in/krupadeshmukh1809"</p>
+<p><a href="resume.html">My Resume</a> | <a href="https://github.com/krupa1809">My GitHub</a> | <a href="https://www.linkedin.com/in/krupadeshmukh1809">My LinkedIn</a></p>
 <h2>Contact</h2>
 
 <p>Email:<a href="mailto:krupammd@gmail.com"> krupammd@gmail.com</a></p>
